crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__dont_panic_on_8_in_octal_escape.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Assign(
        AssignStmt {
            range: 0..16,
            targets: [
                Name(
                    NameExpr {
                        range: 0..4,
                        id: Name("bold"),
                        ctx: Store,
                    },
                ),
            ],
            value: StringLiteral(
                StringLiteralExpr {
                    range: 7..16,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 7..16,
                                value: "\u{3}8[1m",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
