crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..14,
            value: FString(
                FStringExpr {
                    range: 0..14,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..14,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..13,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..7,
                                                        id: Name("user"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 9..12,
                                                        elements: [
                                                            Literal(
                                                                FStringLiteralElement {
                                                                    range: 9..12,
                                                                    value: ">10",
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
