crates/sith_python_parser/src/snapshots/sith_python_parser__string__tests__missing_unicode_lbrace_error.snap
---
source: crates/sith_python_parser/src/string.rs
expression: error
---
ParseError {
    error: Lexical(
        MissingUnicodeLbrace,
    ),
    location: 3..3,
}
